<?xml version="1.0"?>
<package format="2">
  <name>pilz_tutorial</name>
  <version>0.1.0</version>
  <description>Setup your ROS with the pilz_industrial_motion packages and learn how to plan and move your robot along a path with the Pilz command_planner.</description>
  
  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/pilz_robots/Tutorials/MoveRobotWithPilzCommand_planner</url> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>prbt_moveit_config</exec_depend>

</package>
