<?xml version="1.0"?>
<package format="2">
  <name>pilz_tutorial</name>
  <version>0.1.0</version>
  <description>Develop a pick and place application and learn how to teach positions. You create a script which runs with the Python API and use the PTP and LIN commands.</description>
  
  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/pilz_robots/Tutorials/ProgramRobotWithPythonAPI</url> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>prbt_moveit_config</exec_depend>

</package>
