<?xml version="1.0"?>
<package format="2">
  <name>pilz_tutorial</name>
  <version>0.1.0</version>
  <description>Implement a pick and place application and learn to program a simple application with the Python API.</description>
  
  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_robots/Tutorials/PickAndPlacePythonAPI</url> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>prbt_moveit_config</exec_depend>

</package>
