<?xml version="1.0"?>
<package format="2">
  <name>pilz_tutorial</name>
  <version>0.1.0</version>
  <description>Model your first application including an object from a stl file and a table, 
    on with the PRBT 6 is mounted and move the robot in this virtual enviroment.</description>
  
  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/pilz_robots/Tutorials/ModelYourApplicationWithPRBT</url> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>prbt_moveit_config</exec_depend>

</package>
