<?xml version="1.0"?>
<package format="2">
  <name>pilz_tutorial</name>
  <version>0.1.0</version>
  <description>...</description>

  <maintainer email="ros@pilz.de">rosuser</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/pilz_robots/Tutorials/HowToSetupTheRobot</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>prbt_moveit_config</exec_depend>

</package>
